# Cockatoo.AI

./: .gitignore  App.js  Chat.js  LLM_7b-it-GPU-Ver.py  LLM_Core.py  LLM_api.py  LLM_g7b_Core.py  LLM_ge2b_Core.py  Makefile  Modal.js  MyComponent.js  Navbar.js  README.md  Settings.js  index.css  index.js  llm-main.py  llm_env.py  microsoft_DialoGPT-medium.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_fix.md  feature_request.md
.github/workflows/: python-app.yml
docs/: README.md  conf.py
experiments/langchain_lab/: .gitignore  README.md  requirements.txt
experiments/langchain_lab/agents/: linkedin_lookup_agent.py
experiments/langchain_lab/chatbot_demo/: __init__.py  rag.py
experiments/langchain_lab/scripts/: doc_loader.py
experiments/langchain_lab/tools/: tools.py
experiments/model_a_eval/: README.md  chroma_utils_in_digest_repo_info.py  config_genai.py  constants.py  eval.py  langchain_integrate_lab.ipynb  metrics.py  requirements.txt  speech_recognition_wrapper.py  wrapper.py
experiments/model_c/: HF- text-to-speech-tutorial.ipynb  README.md  api.py  coqui_GlowTTS.ipynb  demo.py
